--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,14 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20.x'
         cache: 'npm'
 
     - name: Install dependencies
@@ -48,7 +44,6 @@ jobs:
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
-      if: matrix.node-version == '20.x'
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage/coverage-final.json
@@ -57,7 +52,6 @@ jobs:
         fail_ci_if_error: false
 
     - name: Archive build artifacts
-      if: matrix.node-version == '20.x'
       uses: actions/upload-artifact@v4
       with:
         name: extension-build
@@ -65,7 +59,6 @@ jobs:
         retention-days: 7
 
     - name: Archive test coverage
-      if: matrix.node-version == '20.x'
       uses: actions/upload-artifact@v4
       with:
         name: test-coverage
