--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-webextension-mock": "^4.0.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
