Fix snapshot release: pass timestamp-based filename to build script
Update build-release-zip.sh to accept custom filename as output path parameter.
If a filename is provided, use it directly instead of auto-generating.

Build script changes:
- Accept output-path parameter (can be directory or full file path)
- If directory, auto-generate filename (backward compatible)
- If file path, use exact filename provided
- Create parent directory if needed

CI workflow changes:
- Calculate timestamp-based filename before build
- Pass filename directly to build script
- Remove ugly rename step

Usage examples:
  ./build-release-zip.sh                          # auto-generate in current dir
  ./build-release-zip.sh ./dist                   # auto-generate in ./dist
  ./build-release-zip.sh ai-bookmarks-202510141922-77a03d5a.zip  # exact filename

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,11 +87,6 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Build release package
-      run: |
-        chmod +x build-release-zip.sh
-        ./build-release-zip.sh .
-
     - name: Get version and filename
       id: version
       run: |
@@ -103,6 +98,11 @@ jobs:
         echo "filename=${FILENAME}" >> $GITHUB_OUTPUT
         echo "git_hash=${GIT_HASH}" >> $GITHUB_OUTPUT
         echo "timestamp=${TIMESTAMP}" >> $GITHUB_OUTPUT
+
+    - name: Build release package
+      run: |
+        chmod +x build-release-zip.sh
+        ./build-release-zip.sh "${{ steps.version.outputs.filename }}"
 
     - name: Update latest snapshot release
       uses: softprops/action-gh-release@v2
