Delete and recreate 'latest' release to keep it at top of releases page
GitHub orders releases by creation date, so updating an existing release
doesn't change its position. By deleting and recreating the 'latest' tag
and release on each push, it will always appear at the top of the releases
page as the most recent.

- Add step to delete previous 'latest' release and tag before creating new one
- Use || true to ignore errors if release doesn't exist yet
- Change step name from 'Update' to 'Create' to reflect new behavior

This ensures the development snapshot is always prominently visible at the
top rather than buried chronologically between versioned releases.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,14 @@ jobs:
         chmod +x build-release-zip.sh
         ./build-release-zip.sh "${{ steps.version.outputs.filename }}"
 
-    - name: Update latest snapshot release
+    - name: Delete previous latest release
+      run: |
+        gh release delete latest --yes || true
+        git push origin :refs/tags/latest || true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Create latest snapshot release
       uses: softprops/action-gh-release@v2
       with:
         tag_name: latest
