Add Google Gemini as recommended free LLM provider
Add Gemini as the default and recommended LLM provider with comprehensive
UI setup guidance. Gemini offers the best free tier and is widely accessible
since most users have Google accounts.

Provider Implementation:
- Added 'gemini' provider type with Gemini API integration
- Implemented Gemini-specific API endpoint and request format
- Added API key validation (keys start with 'AI')
- Added proper response parsing and token usage tracking
- Set gemini-flash-latest as default model (auto-updates to latest)
- Added generativelanguage.googleapis.com to host_permissions

UI and Configuration:
- Made Gemini the first option and default provider in settings
- Added comprehensive setup instructions with step-by-step guide
- Added prominent "Get Gemini API Key" button to open Google AI Studio
- Highlighted free tier benefits (1,500 requests/day, no credit card)
- Reordered model defaults to show Gemini first as "FREE - Recommended"
- Updated help text to position Gemini as best free option

Testing:
- Added integration test suite for Gemini provider
- Fixed connection test to use Gemini's payload format
- Updated .env.local.example with Gemini API key setup

Benefits:
- Best free tier: 1,500 requests/day vs OpenRouter's 50/day
- No credit card required
- Fast and capable model (gemini-flash-latest)
- Easy access for users with Google accounts
- Better results than most free alternatives

Get API key at: https://aistudio.google.com/apikey

--- a/.env.local.example
+++ b/.env.local.example
@@ -14,6 +14,10 @@ GROK_API_KEY=xai-your-grok-key-here
 # OpenRouter API Key (starts with sk-or-)
 OPENROUTER_API_KEY=sk-or-your-openrouter-key-here
 
+# Google Gemini API Key (starts with AI)
+# Get yours at: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=AIyour-gemini-key-here
+
 # Optional: Custom endpoint for testing
 # CUSTOM_API_ENDPOINT=https://your-custom-endpoint.com/v1
 # CUSTOM_MODEL_NAME=your-model-name
