--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, devel ]
+    branches: [ main, stable ]
   pull_request:
-    branches: [ main, devel ]
+    branches: [ main, stable ]
 
 jobs:
   build-and-test:
@@ -87,12 +87,13 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Get version and filename
+    - name: Get version info
       id: version
       run: |
         VERSION=$(grep '"version"' manifest.json | sed 's/.*"version": "\(.*\)".*/\1/')
         GIT_HASH=$(git rev-parse --short=8 HEAD)
         TIMESTAMP=$(date -u +%Y%m%d%H%M)
+        # For snapshots, use timestamp-based filename
         FILENAME="ai-bookmarks-${TIMESTAMP}-${GIT_HASH}.zip"
         echo "version=${VERSION}" >> $GITHUB_OUTPUT
         echo "filename=${FILENAME}" >> $GITHUB_OUTPUT
@@ -102,7 +103,10 @@ jobs:
     - name: Build release package
       run: |
         chmod +x build-release-zip.sh
-        ./build-release-zip.sh "${{ steps.version.outputs.filename }}"
+        # Build with current version, then rename for snapshot naming
+        ./build-release-zip.sh "${{ steps.version.outputs.version }}"
+        # Rename to timestamp-based name for snapshot
+        mv ai-bookmarks-${{ steps.version.outputs.version }}-${{ steps.version.outputs.git_hash }}.zip "${{ steps.version.outputs.filename }}"
 
     - name: Delete previous latest release
       run: |
