--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,22 +52,30 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Extract version from tag
+      id: extract_version
+      run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        # Remove 'v' prefix from tag (e.g., v1.3.0 -> 1.3.0)
+        VERSION=${TAG_NAME#v}
+        echo "version=${VERSION}" >> $GITHUB_OUTPUT
+        echo "tag_name=${TAG_NAME}" >> $GITHUB_OUTPUT
+
     - name: Build release package
       run: |
         chmod +x build-release-zip.sh
-        ./build-release-zip.sh .
+        ./build-release-zip.sh ${{ steps.extract_version.outputs.version }}
 
-    - name: Get version and filename
+    - name: Get filename and git hash
       id: version
       run: |
-        VERSION=$(grep '"version"' manifest.json | sed 's/.*"version": "\(.*\)".*/\1/')
+        VERSION=${{ steps.extract_version.outputs.version }}
         GIT_HASH=$(git rev-parse --short=8 HEAD)
         FILENAME="ai-bookmarks-${VERSION}-${GIT_HASH}.zip"
-        TAG_NAME=${GITHUB_REF#refs/tags/}
         echo "version=${VERSION}" >> $GITHUB_OUTPUT
         echo "filename=${FILENAME}" >> $GITHUB_OUTPUT
         echo "git_hash=${GIT_HASH}" >> $GITHUB_OUTPUT
-        echo "tag_name=${TAG_NAME}" >> $GITHUB_OUTPUT
+        echo "tag_name=${{ steps.extract_version.outputs.tag_name }}" >> $GITHUB_OUTPUT
 
     - name: Generate release notes
       id: release_notes
